--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 }
 
 .Home {
-  background-image: url('./assets/back.jpg');
+  background-image: url('./assets/into_the_metaverse.jpg');
   text-align: center;
   min-height: 100vh;
   z-index: -1;
@@ -54,7 +54,7 @@
   margin-top: auto;
   margin-left: auto;
   margin-right: auto; */
-  padding: 150px;
+  padding: 300px;
   color: blue;
 }
 
